# yolo

./: readme.md  yolo.md
cpp/: CMakeLists.txt  Yolo.cpp  Yolo.hpp  last.xml
python/: export.py  hubconf.py  requirements.txt
python/datasets/armor/: labels.cache
python/models/: yolov5n.yaml
python/python/: README.md  detect.py  detectpruned.py  finetune_pruned.py  prune.py  pruned_model.pt  run.sh  train.py  train_sparity.py
python/python/data/: armor.yaml
python/python/datasets/armor/labels/: 1.txt
python/runs/train/exp/: events.out.tfevents.1655613726.rleaves.7723.0  hyp.yaml  opt.yaml
tools/: av2image.py  delete.py  openvino.conf  sj2label.py
tools/LabelRoboMaster/pic/: demo.txt
